# arrow-tools

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE_MIT.txt  README.md  Readme.md  dist-workspace.toml
.github/: dependabot.yml
.github/workflows/: dependebot.yml  release.yml  rust.yml
crates/arrow-tools/: Cargo.toml  Readme.md
crates/arrow-tools/src/: lib.rs  test.rs
crates/csv2arrow/: CONTRIBUTING.md  Cargo.toml  LICENSE_APACHE.txt  Readme.md
crates/csv2arrow/src/: main.rs  test.rs
crates/csv2parquet/: Cargo.toml  Readme.md
crates/csv2parquet/src/: main.rs  test.rs
crates/json2arrow/: CONTRIBUTING.md  Cargo.toml  Readme.md
crates/json2arrow/src/: main.rs  test.rs
crates/json2parquet/: Cargo.toml  Readme.md
crates/json2parquet/src/: main.rs  test.rs
data/: simple.csv  simple.json
src/: main.rs
