[workspace]

members = [
  "crates/csv2arrow",
  "crates/csv2parquet",
  "crates/json2arrow",
  "crates/json2parquet",
  "crates/arrow-tools"
]

resolver = "2"

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.4.3"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "aarch64-unknown-linux-musl", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
# Installers
installers = ["shell"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
