[package]
name = "arrow-tools"
version = "0.22.2"
authors = ["Dominik Moritz <domoritz@cmu.edu>"]
license = "MIT/Apache-2.0"
edition = "2021"
repository = "https://github.com/domoritz/arrow-tools"
description = "Utilities for arrow-tools packages."

[dependencies]
flate2 = { version = "1.0.35", features = ["zlib-ng"] }
