[package]
name = "arrow-tools"
version = "0.22.3"
authors = ["Dominik Moritz <domoritz@cmu.edu>"]
license = "MIT/Apache-2.0"
edition = "2021"
repository = "https://github.com/domoritz/arrow-tools"
description = "Utilities for arrow-tools packages."

[dependencies]
flate2 = { version = "1.1.0", features = ["zlib-ng"] }
# See: https://github.com/rust-lang/libz-sys/issues/225
libz-ng-sys = { version = "<1.1.23" }
