[package]
name = "csv2arrow"
version = "0.17.8"
authors = ["Dominik Moritz <domoritz@cmu.edu>"]
license = "MIT/Apache-2.0"
edition = "2021"
repository = "https://github.com/domoritz/arrow-tools"
description = "Convert CSV files to Arrow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "50.0.0"
arrow-schema = { version = "50.0.0", features = ["serde"] }
serde_json = "1.0.113"
clap = { version = "4.4.18", features = ["derive"] }
arrow-tools = { version = "0.17.8", path = "../arrow-tools" }
