[package]
name = "csv2arrow"
version = "0.22.3"
authors = ["Dominik Moritz <domoritz@cmu.edu>"]
license = "MIT/Apache-2.0"
edition = "2021"
repository = "https://github.com/domoritz/arrow-tools"
homepage = "https://github.com/domoritz/arrow-tools/tree/main/crates/csv2arrow"
description = "Convert CSV files to Arrow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "55.2.0"
arrow-schema = { version = "55.0.0", features = ["serde"] }
serde_json = "1.0.142"
clap = { version = "4.5.42", features = ["derive"] }
arrow-tools = { version = "0.22.3", path = "../arrow-tools" }
regex = "1.11.2"
flate2 = { version = "1.1.2", features = ["zlib-ng"] }
# See: https://github.com/rust-lang/libz-sys/issues/225
libz-ng-sys = { version = "<1.1.23" }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
