[package]
name = "csv2parquet"
version = "0.22.3"
authors = ["Dominik Moritz <domoritz@cmu.edu>"]
license = "MIT/Apache-2.0"
edition = "2021"
repository = "https://github.com/domoritz/arrow-tools"
homepage = "https://github.com/domoritz/arrow-tools/tree/main/crates/csv2parquet"
description = "Convert CSV files to Parquet"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parquet = "54.3.1"
arrow = "54.3.1"
arrow-schema = { version = "54.0.0", features = ["serde"] }
serde_json = "1.0.139"
clap = { version = "4.5.34", features = ["derive"] }
arrow-tools = { version = "0.22.3", path = "../arrow-tools" }
regex = "1.11.1"
flate2 = { version = "1.1.0", features = ["zlib-ng"] }
# See: https://github.com/rust-lang/libz-sys/issues/225
libz-ng-sys = { version = "<1.1.23" }


[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.3"
