[package]
name = "csv2parquet"
version = "0.24.2"
authors = ["Dominik Moritz <domoritz@cmu.edu>"]
license = "MIT/Apache-2.0"
edition = "2021"
repository = "https://github.com/domoritz/arrow-tools"
homepage = "https://github.com/domoritz/arrow-tools/tree/main/crates/csv2parquet"
description = "Convert CSV files to Parquet"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parquet = "57.1"
arrow = "57.1"
arrow-schema = { version = "57.1", features = ["serde"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
arrow-tools = { version = "0.24", path = "../arrow-tools" }
regex = "1.12"
flate2 = { version = "1.1", features = ["zlib-ng"] }
# See: https://github.com/rust-lang/libz-sys/issues/225
libz-ng-sys = { version = "<1.1.24" }


[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
