[package]
name = "json2arrow"
version = "0.20.0"
authors = ["Dominik Moritz <domoritz@cmu.edu>"]
license = "MIT/Apache-2.0"
edition = "2021"
repository = "https://github.com/domoritz/arrow-tools"
homepage = "https://github.com/domoritz/arrow-tools/tree/main/crates/json2arrow"
description = "Convert JSON files to Arrow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "53.3.0"
arrow-schema = { version = "53.0.0", features = ["serde"] }
serde_json = "1.0.133"
clap = { version = "4.5.23", features = ["derive"] }
arrow-tools = { version = "0.20.0", path = "../arrow-tools" }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.3"
