[package]
name = "json2arrow"
version = "0.22.3"
authors = ["Dominik Moritz <domoritz@cmu.edu>"]
license = "MIT/Apache-2.0"
edition = "2021"
repository = "https://github.com/domoritz/arrow-tools"
homepage = "https://github.com/domoritz/arrow-tools/tree/main/crates/json2arrow"
description = "Convert JSON files to Arrow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "54.0.0"
arrow-schema = { version = "54.0.0", features = ["serde"] }
serde_json = "1.0.138"
clap = { version = "4.5.31", features = ["derive"] }
arrow-tools = { version = "0.22.3", path = "../arrow-tools" }
flate2 = { version = "1.0.35", features = ["zlib-ng"] }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.3"
