[package]
name = "json2arrow"
version = "0.24.0"
authors = ["Dominik Moritz <domoritz@cmu.edu>"]
license = "MIT/Apache-2.0"
edition = "2021"
repository = "https://github.com/domoritz/arrow-tools"
homepage = "https://github.com/domoritz/arrow-tools/tree/main/crates/json2arrow"
description = "Convert JSON files to Arrow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "57.1.0"
arrow-schema = { version = "57.1.0", features = ["serde"] }
serde_json = "1.0.145"
clap = { version = "4.5.51", features = ["derive"] }
arrow-tools = { version = "0.24.0", path = "../arrow-tools" }
flate2 = { version = "1.1.5", features = ["zlib-ng"] }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
